# Liquid-Nation

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile.backend  README.md  SCRIPT_README.md  WALLETCONNECT_SETUP.md  check-docker.sh  docker-compose.full.yml  docker-compose.yml  index.html  package-lock.json  package.json  pnpm-lock.yaml  script.js  script.sh  start-docker.sh  styles.css  test.md  vite.config.js
apps/escrow-app/: Cargo.toml
apps/escrow-app/spells/: create-escrow.yaml  dispute-escrow.yaml  refund-escrow.yaml  release-escrow.yaml  resolve-dispute.yaml
apps/escrow-app/src/: lib.rs  main.rs
apps/swap-app/src/: lib.rs
backend/: .env  .env.docker  Cargo.toml
backend/migrations/: 001_init_schema.sql
backend/src/: db.rs  main.rs
backend/src/routes/: escrow.rs  health.rs  mod.rs  orders.rs
backend/src/services/: bitcoin.rs  charms.rs  mod.rs
src/: App.jsx  index.css  main.jsx
src/components/: AnimatedBackground.jsx  CTA.jsx  CreateOrder.jsx  Dashboard.jsx  Features.jsx  FillOrder.css  FillOrder.jsx  Footer.jsx  Hero.jsx  HowItWorks.jsx  Navbar.jsx  Offers.jsx  Settings.jsx  SigningModal.css  SigningModal.jsx  Stats.jsx  Swap.jsx  TransactionHistory.css  TransactionHistory.jsx  WalletConnect.jsx
src/config/: wagmi.js
src/context/: EVMWalletContext.jsx  OrderContext.jsx  ThemeContext.jsx  WalletContext.jsx
src/data/: features.jsx  index.js  stats.js  steps.js
src/services/: api.js
