[workspace]
resolver = "2"
members = [
    "apps/swap-app",
    "apps/escrow-app",
    "backend",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["Liquid Nation Team"]
license = "MIT"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"

