[package]
name = "liquid-nation-backend"
version = "0.1.0"
edition = "2021"
description = "Liquid Nation API server for P2P cross-chain swaps"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP client for Charms API
reqwest = { version = "0.12", features = ["json"] }

# Database (PostgreSQL with Prisma)
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid", "tls-native-tls"] }

# Bitcoin
bitcoin = "0.32"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
dotenv = "0.15"
serde_yaml = "0.9"

[[bin]]
name = "liquid-nation-api"
path = "src/main.rs"

